Bug 282446 - Crash after running the spam wizard
Summary: Crash after running the spam wizard
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-21 00:05 UTC by Christophe Marin
Modified: 2011-09-21 09:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2011-09-21 00:05:54 UTC
Using master,

Steps:
- Make sure you have different anti spam apps (in my case, I have the 'GMX spam wizard' and bogofilter),

- Tools / Anti-spam wizard, select the two entries,
- When clicking ok on the last wizard page, kmail asserts

#8  0x00007fe96e8edd6e in qt_assert_x (where=<optimized out>, what=<optimized out>, file=<optimized out>, line=<optimized out>) at global/qglobal.cpp:2044
#9  0x00007fe96971532d in QList<MailCommon::MailFilter*>::at (this=0x4cc290, i=16) at /usr/include/QtCore/qlist.h:456
#10 0x00007fe969719bbe in MailCommon::FilterManager::appendFilters (this=0xccaa80, filters=Traceback (most recent call last):
  File "/usr/share/kde4/apps/kdevgdb/printers/qt4.py", line 118, in next
    node = array.cast(gdb.lookup_type('QList<%s>::Node' % self.nodetype))
RuntimeError: No type named QList<MailCommon::MailFilter *>::Node.

QList<MailCommon::MailFilter *>, replaceIfNameExists=true) at /kde/src/kdepim/mailcommon/filtermanager.cpp:165
#11 0x00007fe96ee6b3b5 in KMail::AntiSpamWizard::accept (this=0x7fff82173a80) at /kde/src/kdepim/kmail/antispamwizard.cpp:470
#12 0x00007fe96e2603e5 in QDialog::qt_metacall (this=0x7fff82173a80, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fff821722a0) at .moc/release-shared/moc_qdialog.cpp:96
#13 0x00007fe96f604955 in KDialog::qt_metacall (this=0x7fff82173a80, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff821722a0)
    at /usr/src/debug/kdelibs-4.7.42_20110918/build/kdeui/kdialog.moc:151
#14 0x00007fe96f6f1970 in KPageDialog::qt_metacall (this=0x7fff82173a80, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff821722a0)
    at /usr/src/debug/kdelibs-4.7.42_20110918/build/kdeui/kpagedialog.moc:70
#15 0x00007fe96f5f3668 in KAssistantDialog::qt_metacall (this=0x7fff82173a80, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=<optimized out>)
    at /usr/src/debug/kdelibs-4.7.42_20110918/build/kdeui/kassistantdialog.moc:70
#16 0x00007fe96ee7173a in KMail::AntiSpamWizard::qt_metacall (this=0x7fff82173a80, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0x7fff821722a0) at /kde/build/kdepim/kmail/antispamwizard.moc:74
#17 0x00007fe96e9f03fa in QMetaObject::activate (sender=0x7fff82173a80, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#18 0x00007fe96f6045dc in KDialog::slotButtonClicked (this=0x7fff82173a80, button=4096) at /usr/src/debug/kdelibs-4.7.42_20110918/kdeui/dialogs/kdialog.cpp:900
#19 0x00007fe96f604c42 in KDialog::qt_metacall (this=0x7fff82173a80, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0x7fff821724d0) at /usr/src/debug/kdelibs-4.7.42_20110918/build/kdeui/kdialog.moc:190
Comment 1 Laurent Montel 2011-09-21 09:03:37 UTC
Git commit 986d5cd5de8628c3c44b84c92b3d75bccc85d7f9 by Montel Laurent.
Committed on 21/09/2011 at 11:02.
Pushed by mlaurent into branch 'master'.

Fix Bug 282446 - Crash after running the spam wizard

FIXED-IN:4.8
BUG: 282446

M  +2    -1    mailcommon/filtermanager.cpp

http://commits.kde.org/kdepim/986d5cd5de8628c3c44b84c92b3d75bccc85d7f9