Fix Bug 282446 - Crash after running the spam wizard

FIXED-IN:4.8
BUG: 282446